WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110807
Page::m_isInWindow is uninitialized
https://bugs.webkit.org/show_bug.cgi?id=110807
Summary
Page::m_isInWindow is uninitialized
Tim Horton
Reported
2013-02-25 14:41:40 PST
Should be false by default, we'll get put into a window later.
Attachments
patch
(1.09 KB, patch)
2013-02-25 14:43 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
sad patch
(1.09 KB, patch)
2013-02-25 15:25 PST
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-02-25 14:43:09 PST
Created
attachment 190132
[details]
patch
Tim Horton
Comment 2
2013-02-25 14:45:27 PST
Comment on
attachment 190132
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=190132&action=review
> Source/WebCore/page/Page.cpp:164 > , m_isOnscreen(true)
Hmm, that's odd.
Simon Fraser (smfr)
Comment 3
2013-02-25 14:46:31 PST
Comment on
attachment 190132
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=190132&action=review
>> Source/WebCore/page/Page.cpp:164 >> , m_isOnscreen(true) > > Hmm, that's odd.
Should we change this?
Tim Horton
Comment 4
2013-02-25 15:02:59 PST
I think we should. A Page shouldn't be onscreen (or in-window) by default - until it's added to a platform view/window/etc. Any ports that see fallout from such a change should probably make sure that they're calling setIsInWindow/willMoveOffscreen/didMoveOnscreen at the appropriate times...
Tim Horton
Comment 5
2013-02-25 15:25:23 PST
Ugh, none of the other ports bother to update onscreen or in-window state. Instead of implementing this for all the ports, I'm going to (unfortunately) match m_isOnscreen and default to true. WK2 sets it to the correct value very quickly anyway, so this isn't a big deal.
Tim Horton
Comment 6
2013-02-25 15:25:46 PST
Created
attachment 190141
[details]
sad patch
Simon Fraser (smfr)
Comment 7
2013-02-25 15:28:09 PST
Comment on
attachment 190141
[details]
sad patch r=me but please justify your odd choice more in the Changelog.
Tim Horton
Comment 8
2013-02-25 15:37:23 PST
http://trac.webkit.org/changeset/143979
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug